--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -7,6 +7,7 @@
 @import './main-header/main-header';
 @import './main-content/main-content';
 @import './registration/registration';
+@import './dashboard/dashboard';
 @import './reg-form/reg-form';
 @import './main-footer/main-footer';
 @import './modal/modal';
