--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -2,9 +2,10 @@
     <div class="main-content">
         <div class="container">
             Це приблизний список посилань на рiзнi сторiнки, в залежностi вiд ролi користувача
-            <ul>
-                <li><a href="./registration.html">Реєстрацiя</a></li>
-            </ul>
+            <ol>
+                <li style="list-style: decimal">Ескiз 8 <a href="./registration.html">Реєстрацiя</a></li>
+                <li style="list-style: decimal">Ескiз 1 <a href="./recruter-dashboard.html">Dashboard рекрутера</a></li>
+            </ol>
         </div>
     </div>
 {{> main-footer }}
