--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -3,8 +3,8 @@
         <div class="container">
             Це приблизний список посилань на рiзнi сторiнки, в залежностi вiд ролi користувача
             <ol>
-                <li style="list-style: decimal">Ескiз 8 <a href="./registration.html">Реєстрацiя</a></li>
-                <li style="list-style: decimal">Ескiз 1 <a href="./recruter-dashboard.html">Dashboard рекрутера</a></li>
+                <li style="list-style: decimal; margin-left: 20px">Ескiз 8 <a href="./registration.html">Реєстрацiя</a></li>
+                <li style="list-style: decimal; margin-left: 20px">Ескiз 1 <a href="./recruter-dashboard.html">Dashboard рекрутера</a></li>
             </ol>
         </div>
     </div>
