--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -1,4 +1,5 @@
 @import './container/container';
+@import './spinner/spinner';
 @import './nav/nav';
 @import './menu-toggle/menu-toggle';
 @import './fraimed-container/fraimed-container';
