--- a/src/pages/recruter-dashboard.hbs
+++ b/src/pages/recruter-dashboard.hbs
@@ -5,39 +5,41 @@
             <div class="dashboard__section selected-candidates">
                 <div class="h2 dashboard__section-title">Выбранные кондидаты</div>
                 <div class="fraimed-container dashboard__container">
-                    <div class="candidate__first-line">
-                        <div class="candidate__name">Дмитро Пенчук</div>
-                        <div class="candidate__registration-date">Вiд: 04.06.2020</div>
-                    </div>
-                    <div class="candidate__items">
-                        <div class="candidate__item">
-                            <div class="candidate__item-line">
-                                <div class="candidate__item-name">Зарплата:</div>
-                                <div class="candidate__item-value">2000$</div>
-                            </div>
-                            <div class="candidate__item-line">
-                                <div class="candidate__item-name">Місто:</div>
-                                <div class="candidate__item-value">Київ</div>
-                            </div>
+                    <div class="candidate">
+                        <div class="candidate__first-line">
+                            <div class="candidate__name">Дмитро Пенчук</div>
+                            <div class="candidate__date">Вiд: 04.06.2020</div>
                         </div>
-                        <div class="candidate__item">
-                            <div class="candidate__item-line">
-                                <div class="candidate__item-name">Позиція:</div>
-                                <div class="candidate__item-value">UI/UX Designer</div>
+                        <div class="candidate__items">
+                            <div class="candidate__item">
+                                <div class="candidate__item-line">
+                                    <div class="candidate__item-name">Зарплата:</div>
+                                    <div class="candidate__item-value">2000$</div>
+                                </div>
+                                <div class="candidate__item-line">
+                                    <div class="candidate__item-name">Місто:</div>
+                                    <div class="candidate__item-value">Київ</div>
+                                </div>
                             </div>
-                            <div class="candidate__item-line">
-                                <div class="candidate__item-name">Досвід роботи:</div>
-                                <div class="candidate__item-value">2 роки</div>
+                            <div class="candidate__item">
+                                <div class="candidate__item-line">
+                                    <div class="candidate__item-name">Позиція:</div>
+                                    <div class="candidate__item-value">UI/UX Designer</div>
+                                </div>
+                                <div class="candidate__item-line">
+                                    <div class="candidate__item-name">Досвід роботи:</div>
+                                    <div class="candidate__item-value">2 роки</div>
+                                </div>
                             </div>
-                        </div>
-                        <div class="candidate__item">
-                            <div class="candidate__item-line">
-                                <div class="candidate__item-name">Вид зайнятості:</div>
-                                <div class="candidate__item-value">Part-time</div>
-                            </div>
-                            <div class="candidate__item-line">
-                                <div class="candidate__item-name">Знання мов:</div>
-                                <div class="candidate__item-value">Upper-intermedia</div>
+                            <div class="candidate__item">
+                                <div class="candidate__item-line">
+                                    <div class="candidate__item-name">Вид зайнятості:</div>
+                                    <div class="candidate__item-value">Part-time</div>
+                                </div>
+                                <div class="candidate__item-line">
+                                    <div class="candidate__item-name">Знання мов:</div>
+                                    <div class="candidate__item-value">Upper-intermediate</div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -84,16 +86,113 @@
             <div class="dashboard__section added-vacancies">
                 <div class="h2 dashboard__section-title">Доданi вакансії</div>
                 <div class="fraimed-container dashboard__container">
-
+                    <div class="vacancy">
+                        <div class="candidate__first-line vacancy__line-first">
+                            <div class="candidate__name">Senior Backend Developer</div>
+                            <div class="candidate__date vacancy__date">12 Годин тому</div>
+                        </div>
+                        <div class="vacancy__line-second">
+                            <div class="vacancy__salary-location">
+                                <div class="vacancy__salary">2000-2500$</div>
+                                <div class="vacancy__location">Київ</div>
+                            </div>
+                            <div class="vacancy__thumbler"></div>
+                        </div>
+                        <div class="vacancy__line-third">
+                            <div class="vacancy__experience">
+                                <div class="candidate__item-line">
+                                    <div class="candidate__item-name">Досвід роботи:</div>
+                                    <div class="candidate__item-value">3 роки</div>
+                                </div>
+                                <div class="candidate__item-line">
+                                    <div class="candidate__item-name">Вид зайнятості:</div>
+                                    <div class="candidate__item-value">Remote</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="vacancy__description">We are looking for a Backend Developer who is motivated to combine the art of design with the art of programming...</div>
+                        <ul class="vacancy__tags">
+                            <li class="vacancy__tag">Python</li>
+                            <li class="vacancy__tag">Django</li>
+                            <li class="vacancy__tag">DRF</li>
+                        </ul>
+                        <div class="vacancy__contact">
+                            <span class="vacancy__recruiter">Alexander Ruban</span>, <span class="vacancy__position">Ceo</span> в <span class="vacancy__company">Interview.top</span>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="dashboard__section scheduled-interviews">
-                <div class="h2 dashboard__section-title">Заплановані Інтерв`ю</div>
-                <div class="fraimed-container dashboard__container">
-
+                <div class="h2 dashboard__section-title">Заплановані iнтерв`ю</div>
+                <div class="interview">
+                    <div class="fraimed-container dashboard__container">
+                        <div class="interview__inner">
+                            <div class="interview__info">
+                                <div class="interview__line-first">
+                                    <span class="interview__candidate">Дметро Пенчук</span>,
+                                    <span class="interview__position">Backend Developer</span>
+                                </div>
+                                <div class="interview__line-second">
+                                    <div class="interview__date">21.05.20</div>,
+                                    <div class="interview__time">12:32</div>
+                                </div>
+                                <div class="interview__company">Interview.top</div>
+                                <div class="interview__person">Назначив Alexander Ruban</div>
+                            </div>
+                            <div class="interview__buttons">
+                                <button class="the-button interview__button-video">Додати запис iнтерв`ю</button>
+                                <button class="the-button interview__button-feedback">Додати фідбек</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="interview">
+                    <div class="fraimed-container dashboard__container">
+                        <div class="interview__inner">
+                            <div class="interview__info">
+                                <div class="interview__line-first">
+                                    <span class="interview__candidate">Олег Коваленко</span>,
+                                    <span class="interview__position">Backend Developer</span>
+                                </div>
+                                <div class="interview__line-second">
+                                    <div class="interview__date">20.05.20</div>,
+                                    <div class="interview__time">11:30</div>
+                                </div>
+                                <div class="interview__company">Interview.top</div>
+                                <div class="interview__person">Назначив Alexander Ruban</div>
+                            </div>
+                            <div class="interview__buttons">
+                                <button class="the-button interview__button-video">Додати запис iнтерв`ю</button>
+                                <button class="the-button interview__button-feedback">Додати фідбек</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="interview">
+                    <div class="fraimed-container dashboard__container">
+                        <div class="interview__inner">
+                            <div class="interview__info">
+                                <div class="interview__line-first">
+                                    <span class="interview__candidate">Клим Кравчук</span>,
+                                    <span class="interview__position">Backend Developer</span>
+                                </div>
+                                <div class="interview__line-second">
+                                    <div class="interview__date">19.05.20</div>,
+                                    <div class="interview__time">10:50</div>
+                                </div>
+                                <div class="interview__company">Interview.top</div>
+                                <div class="interview__person">Назначив Alexander Ruban</div>
+                            </div>
+                            <div class="interview__buttons">
+                                <button class="the-button interview__button-video">Додати запис iнтерв`ю</button>
+                                <button class="the-button interview__button-feedback">Додати фідбек</button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
+        {{> spinner }}
     </div>
 </div>
 {{> main-footer }}
