Added thumbler to .

--- a/src/components/dashboard/dashboard.scss
+++ b/src/components/dashboard/dashboard.scss
@@ -234,6 +234,8 @@
     }
 
     &-second {
+      display: flex;
+      justify-content: space-between;
       margin-bottom: 13px;
 
       @media(max-width: 575px) {
