--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -1,5 +1,6 @@
 @import './container/container';
 @import './spinner/spinner';
+@import './thumbler/thumbler';
 @import './nav/nav';
 @import './menu-toggle/menu-toggle';
 @import './fraimed-container/fraimed-container';
