--- a/src/pages/recruter-dashboard.hbs
+++ b/src/pages/recruter-dashboard.hbs
@@ -96,7 +96,9 @@
                                 <div class="vacancy__salary">2000-2500$</div>
                                 <div class="vacancy__location">Київ</div>
                             </div>
-                            <div class="vacancy__thumbler"></div>
+                            <div class="vacancy__thumbler">
+                                {{> thumbler }}
+                            </div>
                         </div>
                         <div class="vacancy__line-third">
                             <div class="vacancy__experience">
