--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -3,6 +3,7 @@
 @import './thumbler/thumbler';
 @import './nav/nav';
 @import './menu-toggle/menu-toggle';
+@import './social-media/social-media';
 @import './fraimed-container/fraimed-container';
 @import './main-menu/main-menu';
 @import './the-button/the-button';
@@ -10,6 +11,8 @@
 @import './main-content/main-content';
 @import './registration/registration';
 @import './dashboard/dashboard';
+@import './search-candidate/search-candidate';
+@import './applicant/applicant';
 @import './reg-form/reg-form';
 @import './main-footer/main-footer';
 @import './modal/modal';
