--- a/src/pages/recruter-dashboard.hbs
+++ b/src/pages/recruter-dashboard.hbs
@@ -7,7 +7,7 @@
                 <div class="fraimed-container dashboard__container">
                     <div class="candidate">
                         <div class="candidate__first-line">
-                            <div class="candidate__name">Дмитро Пенчук</div>
+                            <a href="#" class="base__title candidate__name">Дмитро Пенчук</a>
                             <div class="candidate__date">Вiд: 04.06.2020</div>
                         </div>
                         <div class="candidate__items">
@@ -50,7 +50,7 @@
                 <div class="fraimed-container dashboard__container">
                     <div class="offer">
                         <div class="offer__intro">
-                            <div class="offer__title">UI/UX Designer</div>
+                            <a href="#" class="base__subtitle offer__title">UI/UX Designer</a>
                             <div class="offer__date">17.05.2020</div>
                         </div>
                         <div class="offer__description">Текст</div>
@@ -61,7 +61,7 @@
                     </div>
                     <div class="offer">
                         <div class="offer__intro">
-                            <div class="offer__title">Web Designer</div>
+                            <a href="#" class="base__subtitle offer__title">Web Designer</a>
                             <div class="offer__date">16.05.2020</div>
                         </div>
                         <div class="offer__description">Текст</div>
@@ -72,7 +72,7 @@
                     </div>
                     <div class="offer">
                         <div class="offer__intro">
-                            <div class="offer__title">Web Designer</div>
+                            <a href="#" class="base__subtitle offer__title">Web Designer</a>
                             <div class="offer__date">16.05.2020</div>
                         </div>
                         <div class="offer__description">Текст</div>
@@ -88,7 +88,7 @@
                 <div class="fraimed-container dashboard__container">
                     <div class="vacancy">
                         <div class="candidate__first-line vacancy__line-first">
-                            <div class="candidate__name">Senior Backend Developer</div>
+                            <a href="#" class="base__title candidate__name">Senior Backend Developer</a>
                             <div class="candidate__date vacancy__date">12 Годин тому</div>
                         </div>
                         <div class="vacancy__line-second">
@@ -119,7 +119,7 @@
                             <li class="vacancy__tag">DRF</li>
                         </ul>
                         <div class="vacancy__contact">
-                            <span class="vacancy__recruiter">Alexander Ruban</span>, <span class="vacancy__position">Ceo</span> в <span class="vacancy__company">Interview.top</span>
+                            <a href="#" class="vacancy__recruiter">Alexander Ruban</a>, <span class="vacancy__position">Ceo</span> в <span class="vacancy__company">Interview.top</span>
                         </div>
                     </div>
                 </div>
