--- a/src/components/dashboard/dashboard.scss
+++ b/src/components/dashboard/dashboard.scss
@@ -36,24 +36,22 @@
     align-items: flex-end;
     margin-bottom: 22px;
 
-    @media(max-width: 575px) {
+    @media(max-width: 767px) {
      flex-direction: column;
       align-items: flex-start;
       margin-bottom: 18px;
     }
   }
 
-  &__name {
-    font-weight: 600;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.05em;
-    color: $blue;
+  &__more-info {
+    margin-right: -15px;
+    margin-top: 1px;
+    margin-bottom: -12px;
+    max-width: 200px;
+    margin-left: auto;
+  }
 
-    @media(max-width: 575px) {
-      font-size: 18px;
-      margin-bottom: 10px;
-    }
+  &__name {
   }
 
   &__date {
@@ -87,6 +85,28 @@
       line-height: 1.2;
     }
 
+    &-blocks {
+      display: none;
+    }
+
+    &-block {
+      margin-bottom: 27px;
+
+      .candidate__item-value {
+        margin-bottom: 6px;
+      }
+      .candidate__item-name {
+        letter-spacing: 0.03em;
+      }
+
+      @media(max-width: 575px) {
+        padding-right: 0;
+        font-size: 14px;
+        line-height: 1.2;
+        margin-bottom: 15px;
+      }
+    }
+
     &-line {
       display: flex;
       margin-bottom: 17px;
@@ -94,6 +114,12 @@
 
     &-name {
       padding-right: 6px;
+
+      p {
+        margin-top: 7px;
+        margin-bottom: -7px;
+        letter-spacing: 0.01em;
+      }
     }
 
     &-value {
@@ -130,16 +156,7 @@
   }
 
   &__title {
-    font-weight: 600;
-    font-size: 16px;
-    line-height: 1.4;
-    letter-spacing: 0.05em;
-    color: $blue;
-    padding-bottom: 7px;
 
-    @media(max-width: 575px) {
-      font-size: 14px;
-    }
   }
 
   &__date {
