--- a/src/components/registration/registration.scss
+++ b/src/components/registration/registration.scss
@@ -8,5 +8,14 @@
 
   &__title {
     text-align: center;
+    padding-bottom: 63px;
+
+    @media(max-width: 1365px) {
+      padding-bottom: 50px;
+    }
+
+    @media(max-width: 991px) {
+      padding-bottom: 30px;
+    }
   }
 }
