--- a/src/components/main-header/main-header.hbs
+++ b/src/components/main-header/main-header.hbs
@@ -3,7 +3,7 @@
         <div class="main-header__menu-toggle">
             {{> menu-toggle }}
         </div>
-        <a href="/" class="main-header__logo">InterviewTop</a>
+        <a href="./index.html" class="main-header__logo">InterviewTop</a>
         <div class="main-header__nav main-menu">
             {{> nav }}
         </div>
