--- a/src/pages/recruter-search-candidate.hbs
+++ b/src/pages/recruter-search-candidate.hbs
@@ -67,7 +67,8 @@
                         </div>
                         <div class="more-applicants">
                             <div class="base__subtitle more-applicants__title">Cхожi кандидати:</div>
-                            <div class="more-applicants__slides">
+                            <div class="more-applicants__wrap">
+                                <div class="more-applicants__slides">
                                 <a href="#" class="slide fraimed-container">
                                     <div class="slide__position">Python Developer</div>
                                     <div class="vacancy__location slide__location">Київ</div>
@@ -109,6 +110,7 @@
                                 </div>
                                 </a>
                             </div>
+                            </div>
                         </div>
                     </div>
                     <div class="inner-container__small applicant__card">
@@ -145,31 +147,34 @@
                         </div>
                     </div>
                     <div class="applicant__interview-right">
-                            <div class="base__subtitle applicant__answers-title">Запитання:</div>
-                            <div class="fraimed-container applicant__answers-wrap">
-                                <ol class="applicant__answers">
-                                    <li class="applicant__answer">
-                                        <div class="applicant__answer-text">Что такое Virtual DOM?</div>
-                                        <div class="base__notes applicant__answer-time">27:00</div>
-                                    </li>
-                                    <li class="applicant__answer">
-                                        <div class="applicant__answer-text">Что такое Shadow DOM?</div>
-                                        <div class="base__notes applicant__answer-time">27:45</div>
-                                    </li>
-                                    <li class="applicant__answer">
-                                        <div class="applicant__answer-text">Как бы ты правильно реализовал список из 1000 элементов, который получает данные через Redux?</div>
-                                        <div class="base__notes applicant__answer-time">28:23</div>
-                                    </li>
-                                    <li class="applicant__answer">
-                                        <div class="applicant__answer-text">С какой сложной проблемой столкнулся и как решал?</div>
-                                        <div class="base__notes applicant__answer-time">33:18</div>
-                                    </li>
-                                    <li class="applicant__answer">
-                                        <div class="applicant__answer-text">Какаие способы оптимизации в ReactJS существуют?</div>
-                                        <div class="base__notes applicant__answer-time">35:41</div>
-                                    </li>
-                                </ol>
-                            </div>
+                        <div class="base__subtitle applicant__answers-title">Запитання:</div>
+                        <div class="fraimed-container applicant__answers-wrap">
+                            <ol class="applicant__answers">
+                                <li class="applicant__answer">
+                                    <div class="applicant__answer-text">Что такое Virtual DOM?</div>
+                                    <div class="base__notes applicant__answer-time">27:00</div>
+                                </li>
+                                <li class="applicant__answer">
+                                    <div class="applicant__answer-text">Что такое Shadow DOM?</div>
+                                    <div class="base__notes applicant__answer-time">27:45</div>
+                                </li>
+                                <li class="applicant__answer">
+                                    <div class="applicant__answer-text">Как бы ты правильно реализовал список из 1000 элементов, который получает данные через Redux?</div>
+                                    <div class="base__notes applicant__answer-time">28:23</div>
+                                </li>
+                                <li class="applicant__answer">
+                                    <div class="applicant__answer-text">С какой сложной проблемой столкнулся и как решал?</div>
+                                    <div class="base__notes applicant__answer-time">33:18</div>
+                                </li>
+                                <li class="applicant__answer">
+                                    <div class="applicant__answer-text">Какаие способы оптимизации в ReactJS существуют?</div>
+                                    <div class="base__notes applicant__answer-time">35:41</div>
+                                </li>
+                                <li class="applicant__answer">
+                                    <div class="applicant__answer-text">Еще какой-то вопрос для отображения прокрутки?</div>
+                                    <div class="base__notes applicant__answer-time">45:41</div>
+                                </li>
+                            </ol>
                         </div>
                     </div>
                 </div>
