--- a/src/components/applicant/applicant.scss
+++ b/src/components/applicant/applicant.scss
@@ -252,7 +252,7 @@
 
       &:hover {
         box-shadow: 0 0 1px rgba(0, 0, 0, 0.04), 0 2px 6px rgba(91, 92, 238, 0.06), 0 15px 30px rgba(91, 92, 238, 0.15);
-        background-image: url(../images/right-arrow_blue.svg);
+        background-image: url(../images/left-arrow_blue.svg);
       }
     }
 
@@ -264,7 +264,7 @@
       background: #fff;
       width: 24px;
       height: 24px;
-      background-image: url(../images/righ-arrow.svg);
+      background-image: url(../images/right-arrow.svg);
       background-repeat: no-repeat;
       background-position: center;
 
