--- a/src/components/dashboard/dashboard.scss
+++ b/src/components/dashboard/dashboard.scss
@@ -1,4 +1,27 @@
 .dashboard {
+
+  &__two-columns {
+    display: flex;
+    justify-content: space-between;
+
+    @media(max-width: 1099px) {
+      flex-direction: column-reverse;
+    }
+  }
+
+  &__main {
+    @media(max-width: 1099px) {
+      max-width: 100%;
+    }
+  }
+
+  &__aside {
+    @media(max-width: 1099px) {
+      max-width: 100%;
+      margin-bottom: 54px;
+    }
+  }
+
   &__content {
     padding: 100px 0;
 
@@ -52,6 +75,15 @@
   }
 
   &__name {
+
+    &-rating {
+      display: flex;
+      align-items: center;
+    }
+  }
+
+  &__rating {
+    margin-left: 10px;
   }
 
   &__date {
