--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -11,6 +11,7 @@
 @import './main-content/main-content';
 @import './registration/registration';
 @import './dashboard/dashboard';
+@import './search-form/search-form';
 @import './search-candidate/search-candidate';
 @import './applicant/applicant';
 @import './reg-form/reg-form';
