--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -6,6 +6,7 @@
                 <li style="list-style: decimal; margin-left: 20px">Ескiз 8 <a href="./registration.html">Реєстрацiя</a></li>
                 <li style="list-style: decimal; margin-left: 20px">Ескiз 1 <a href="./recruter-dashboard.html">Dashboard рекрутера</a></li>
                 <li style="list-style: decimal; margin-left: 20px">Ескiз 2 <a href="./recruter-search-candidate.html">Рекрутер дивиться профайл кандидата</a></li>
+                <li style="list-style: decimal; margin-left: 20px">Ескiз 3 <a href="./recruter-search-candidates-list.html">Рекрутер дивиться список кандидатiв</a></li>
             </ol>
         </div>
     </div>
