--- a/src/assets/styles/plugins/slick.scss
+++ b/src/assets/styles/plugins/slick.scss
@@ -11,20 +11,21 @@
 
 
 /* -------- Start: Standard font and loader redefined ---------  */
+
+@font-face
+{
+  font-family: 'slick';
+  font-weight: normal;
+  font-style: normal;
+
+  src: url('./../fonts/slick.eot');
+  src: url('./../fonts/slick.eot?#iefix') format('embedded-opentype'), url('./../fonts/slick.woff') format('woff'), url('./../fonts/slick.ttf') format('truetype'), url('./fonts/slick.svg#slick') format('svg');
+}
+
 .slick-prev,
 .slick-next {
   &:before {
     content: '';
-  }
-}
-
-.slick-dots {
-  li {
-    button {
-      &:before {
-        font-family: 'Open Sans', sans-serif;
-      }
-    }
   }
 }
 
