Added almost all selectors to filter on page where recruiter search candidates list

--- a/src/components/dashboard/dashboard.scss
+++ b/src/components/dashboard/dashboard.scss
@@ -79,11 +79,19 @@
     &-rating {
       display: flex;
       align-items: center;
+
+      @media(max-width: 575px) {
+        align-items: flex-start;
+      }
     }
   }
 
   &__rating {
     margin-left: 10px;
+
+    @media(max-width: 575px) {
+      padding-top: 2px;
+    }
   }
 
   &__date {
