--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -1,10 +1,13 @@
 @import './container/container';
+@import './reg-form/reg-form';
 @import './spinner/spinner';
 @import './thumbler/thumbler';
 @import './nav/nav';
 @import './menu-toggle/menu-toggle';
 @import './social-media/social-media';
 @import './fraimed-container/fraimed-container';
+@import './rangeslider/rangeslider';
+@import './filters/filters';
 @import './main-menu/main-menu';
 @import './the-button/the-button';
 @import './main-header/main-header';
@@ -14,7 +17,6 @@
 @import './search-form/search-form';
 @import './search-candidate/search-candidate';
 @import './applicant/applicant';
-@import './reg-form/reg-form';
 @import './main-footer/main-footer';
 @import './modal/modal';
 @import './callback/callback';
