--- a/src/components/search-form/search-form.hbs
+++ b/src/components/search-form/search-form.hbs
@@ -7,19 +7,19 @@
     </div>
     <div class="search-form__selectors">
         <div class="search-form__selectors-left">
-            Шукати
-            <select name="where">
-                <option value="1">у назвi в резюме</option>
+            Шукати у
+            <select name="where" class="base__subtitle search-form__select">
+                <option value="1">назвi в резюме</option>
                 <option value="2">вибiр 2</option>
-                <option value="3">вибiр 3</option>
+                <option value="3">якийся довгий селектор, що не влазить в екран</option>
             </select>
         </div>
         <div class="search-form__selectors-right">
             за
-            <select name="period">
-                <option value="1">за 3 місяці</option>
-                <option value="2">за 6 місяців</option>
-                <option value="3">за 12 місяців</option>
+            <select name="period" class="base__subtitle search-form__select">
+                <option value="1">3 місяці</option>
+                <option value="2">6 місяців</option>
+                <option value="3">якийся довгий селектор, що не влазить в екран</option>
             </select>
         </div>
     </div>
