--- a/src/pages/recruter-search-candidates-list.hbs
+++ b/src/pages/recruter-search-candidates-list.hbs
@@ -215,8 +215,11 @@
                     </div>
                 </div>
                 <div class="inner-container__small dashboard__aside">
-                    <div class="fraimed-container dashboard__container">
-                </div>
+                    <div class="fraimed-container filters__container">
+                        <div class="search-candidate__filters">
+                            {{> filters }}
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
