--- a/src/components/search-form/search-form.scss
+++ b/src/components/search-form/search-form.scss
@@ -77,17 +77,43 @@
     line-height: 1.4;
     letter-spacing: 0.05em;
     color: $black;
-    margin-bottom: 23px;
+    margin-bottom: 16px;
     display: flex;
 
-    @media(max-width: 479px) {
+    @media(max-width: 767px) {
       flex-direction: column;
+      align-items: center;
+    }
+
+    @media(max-width: 479px) {
+      font-size: 14px;
+      line-height: 1.2;
     }
 
     &-left {
-      @media(max-width: 479px) {
+      @media(max-width: 767px) {
         margin-bottom: 10px;
       }
+    }
+  }
+
+  &__select {
+    line-height: 2;
+    border: transparent;
+    font-weight: 400;
+    color: $blue;
+    margin: 0 19px 0 -7px;
+    max-width: 150px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+
+    @media(max-width: 479px) {
+      width: 100px;
+    }
+
+    @media(max-width: 1099px) {
+      margin: 0 10px;
     }
   }
 
